appId: app.traco
---
- tapOn:
    id: "voltar-pagina"
    optional: true
- hideKeyboard
- tapOn:
    id: "abrir-pilha"
- extendedWaitUntil:
    visible: "quero correr de manhã"
    timeout: 4000
- tapOn: "Buscar nas notas"
- inputText: "celular"
- hideKeyboard
- tapOn: códice
- extendedWaitUntil:
    visible: "CÓDICE"
    timeout: 4000
