appId: app.traco
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Permitir"
    timeout: 3000
    optional: true
- tapOn:
    text: "Permitir"
    optional: true
- tapOn:
    id: pagina
- inputText: "o texto desta nota de teste"
- swipe:
    direction: DOWN
- tapOn: Recordar
- extendedWaitUntil:
    visible: "Recordar"
    timeout: 5000
- tapOn: Memória
- inputText: "correr de manha"
- tapOn: Revelar
- extendedWaitUntil:
    visible: "DE MEMÓRIA"
    timeout: 4000
- assertVisible: "A NOTA"
